[package]
name = "my_crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.12.15"
scraper = "0.23.1"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.19"
clap = { version = "4.5.32" , features = ["derive"]}

[dev-dependencies]
mockito = "1.7.0"